--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,3 +1,3 @@
 <h1>create a event</h1>
 <%= render 'form', studio: studio, event: event %>
-<%= link_to 'back', studio_event_path(studio,event) %>
+<%= link_to 'back', studio_events_path(studio) %>
