--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,6 +5,10 @@
 <h3>description: <%= event.description %></h3>
 
 <%= link_to 'back', studio_events_path(studio) %>
+
+<% if is_owner %>
 <%= link_to 'edit', edit_studio_event_path(studio, event) %>
 <%= link_to 'delete', studio_event_path(studio,event), method: :delete, data: { confirm: 'are you sure?' } %>
-<%= button_to 'Join', root_path, method: :get %>
+<% end %>
+<br>
+<%= link_to 'Join', event_registration_path(event_id: event.id, user_id: studio.user_id), method: :post, data: {confirm: 'Join this event?'} %>
