--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
         <%= link_to 'Login', new_user_session_path %></p>
       <% end %>
     </nav>
+    <div><%= flash[:notice] %></div>
     <%= yield %>
   </body>
 </html>
