--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,11 +4,11 @@
 <h3>ends at: <%= event.ends_at.strftime('%a, %d %b %H:%M') %></h3>
 <h3>description: <%= event.description %></h3>
 
-<%= link_to 'back', studio_events_path(studio) %>
+<%= link_to 'Back', studio_events_path(studio) %>
 
 <% if is_owner %>
-<%= link_to 'edit', edit_studio_event_path(studio, event) %>
-<%= link_to 'delete', studio_event_path(studio,event), method: :delete, data: { confirm: 'are you sure?' } %>
+<%= link_to 'Edit', edit_studio_event_path(studio, event) %>
+<%= link_to 'Delete', studio_event_path(studio,event), method: :delete, data: { confirm: 'are you sure?' } %>
 <% end %>
 <br>
 <%= link_to 'Join', event_registration_path(event_id: event.id, user_id: studio.user_id), method: :post, data: {confirm: 'Join this event?'} %>
